src/objects/Shipping_Charges__mdt.object
<CustomObject>
    <fields>
        <fullName>Charge__c</fullName>
        <label>Charge</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shipping Charge</label>
    <pluralLabel>Shipping Charges</pluralLabel>
</CustomObject>